--- a/microbenchmarks/concrete/Makefile
+++ b/microbenchmarks/concrete/Makefile
@@ -3,6 +3,7 @@ CFLAGS?=-O0
 MAKEFLAGS:=-j 10 -k
 dirs=$(realpath $(wildcard */))
 results=$(addsuffix /resx5.txt,$(dirs))
+shortresults=$(addsuffix /res.txt,$(dirs))
 
 all: results.txt
 
@@ -21,6 +22,11 @@ progs: $(addsuffix /build/main,$(dirs))
 results.txt: $(results)
 	cat $(results) > results.txt
 
+shortresults.txt: $(shortresults)
+	cat $(shortresults) > shortresults.txt
+
 %/resx5.txt: progs
 	$(MAKE) -C $* resx5.txt
 
+%/res.txt: progs
+	$(MAKE) -C $* res.txt
