--- a/microbenchmarks/concrete/factor/Makefile
+++ b/microbenchmarks/concrete/factor/Makefile
@@ -36,7 +36,7 @@ build/Monitor.interp% interp_time%:
 	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../interp_time$*'
 
 build/Monitor.mixed% mixed_time%:
-	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../mixed_time$*'
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(LARGE) 2>1 ; } 2> ../mixed_time$*'
 
 mixedres%.txt: build/Monitor.mixed%
 	grep $(SMALL) $< | tail -n1 | sed 's/.*"//g' > $@
@@ -47,7 +47,10 @@ interpres%.txt: build/Monitor.interp%
 
 
 ref.txt:
-	factor $(SMALL) > ref.txt
+	factor $(LARGE) > ref.txt
+
+shortref.txt:
+	factor $(SMALL) > shortref.txt
 
 .PHONY: resx5.txt
 resx5.txt: cleanres res_1.txt res_2.txt res_3.txt res_4.txt res_5.txt
@@ -64,7 +67,7 @@ cleanres:
 	rm -f res*.txt
 
 
-res_%.txt: ref.txt mixedres%.txt interpres%.txt
+res_%.txt: ref.txt shortref.txt interpres%.txt mixedres%.txt
 	echo "  rep$*:" >> $@
-	diff -q ref.txt interpres$*.txt; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL, $$(grep user interp_time$* | awk '{print $$2}')"; else echo "    interp: PASS, $$(grep user interp_time$* | awk '{print $$2}')"; fi >> $@
-	diff -q ref.txt mixedres$*.txt; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL, $$(grep user mixed_time$* | awk '{print $$2}')"; else echo "    mixed: PASS, $$(grep user mixed_time$* | awk '{print $$2}')"; fi >> $@
+	diff -q shortref.txt interpres$*.txt &>/dev/null; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL"; else echo "    interp: PASS"; fi >> $@
+	diff -q ref.txt mixedres$*.txt &>/dev/null; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL, $$(grep user mixed_time$* | awk '{print $$2}')"; else echo "    mixed: PASS, $$(grep user mixed_time$* | awk '{print $$2}')"; fi >> $@
