--- a/microbenchmarks/concrete/tsort/Makefile
+++ b/microbenchmarks/concrete/tsort/Makefile
@@ -3,6 +3,9 @@ BIN?=main
 CFLAGS?=-O0
 USER=--user $$(id -u):$$(id -g)
 DOCKER=docker run $(USER) --rm --mount type=bind,src=$$(pwd),dst=/project/ tase bash
+
+LARGE=../tsortFile
+SMALL=../tsortShort
 all: build/main build/obj.dump
 
 
@@ -26,11 +29,12 @@ build/obj.dump: build/main
 clean:
 	rm -rf build/* res*.txt interpres*.txt mixedres*.txt
 
+#.PRECIOUS: build/Monitor.interp% interp_time% build/Monitor.mixed% mixed_time% 
 build/Monitor.interp% interp_time%:
-	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - ../harness.c 2>1 ; } 2> ../interp_time$*'
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../interp_time$*'
 
 build/Monitor.mixed% mixed_time%:
-	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - ../harness.c 2>1 ; } 2> ../mixed_time$*'
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(LARGE) 2>1 ; } 2> ../mixed_time$*'
 
 interpres%.txt: build/Monitor.interp%
 	grep ^OUT $< | awk '{print $$2}' > $@
@@ -43,8 +47,13 @@ tsortShort:
 	head -n 10000 tsortFile > tsortShort
 
 
-ref.txt: tsortShort
-	tsort tsortShort > ref.txt
+ref.txt:
+	tsort tsortFile > ref.txt
+
+
+shortref.txt: tsortShort
+	tsort tsortShort > shortref.txt
+
 
 .PHONY: resx5.txt
 resx5.txt: cleanres res_1.txt res_2.txt res_3.txt res_4.txt res_5.txt
@@ -61,7 +70,7 @@ cleanres:
 	rm -f res*.txt
 
 
-res_%.txt: ref.txt interpres%.txt mixedres%.txt
+res_%.txt: ref.txt shortref.txt interpres%.txt mixedres%.txt
 	echo "  rep$*:" >> $@
-	diff -q ref.txt interpres$*.txt &>/dev/null; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL, $$(grep user interp_time$* | awk '{print $$2}')"; else echo "    interp: PASS, $$(grep user interp_time$* | awk '{print $$2}')"; fi >> $@
+	diff -q shortref.txt interpres$*.txt &>/dev/null; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL"; else echo "    interp: PASS"; fi >> $@
 	diff -q ref.txt mixedres$*.txt &>/dev/null; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL, $$(grep user mixed_time$* | awk '{print $$2}')"; else echo "    mixed: PASS, $$(grep user mixed_time$* | awk '{print $$2}')"; fi >> $@
