--- a/microbenchmarks/concrete/md5sum/Makefile
+++ b/microbenchmarks/concrete/md5sum/Makefile
@@ -25,12 +25,12 @@ build/obj.dump: build/main
 clean:
 	rm -rf build/* res*.txt interpres*.txt mixedres*.txt
 
-#.PRECIOUS: build/Monitor.interp% interp_time% build/Monitor.mixed% mixed_time%
+.PRECIOUS: build/Monitor.interp% interp_time% build/Monitor.mixed% mixed_time%
 build/Monitor.interp% interp_time%:
-	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../interp_time$*'
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../interp_time$*'
 
 build/Monitor.mixed% mixed_time%:
-	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(LARGE) 2>1 ; } 2> ../mixed_time$*'
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - $(LARGE) 2>1 ; } 2> ../mixed_time$*'
 
 mixedres%.txt: build/Monitor.mixed%
 	x=$$(grep -c model_printf $<); if [ $$x -gt 0 ]; then grep -A2 _printf $< | tail -n1 > $@; else grep -A1 _puts $< | tail -n1 > $@; fi
@@ -39,10 +39,10 @@ interpres%.txt: build/Monitor.interp%
 	x=$$(grep -c model_printf $<); if [ $$x -gt 0 ]; then grep -A2 _printf $< | tail -n1 > $@; else grep -A1 _puts $< | tail -n1 > $@; fi
 
 ref.txt:
-	cd build/ && md5sum $(SMALL) | awk '{print $$1}' > ../ref.txt
+	cd build/ && md5sum $(LARGE) | awk '{print $$1}' > ../ref.txt
 
 shortref.txt:
-	cd build/ && md5sum $(LARGE) | awk '{print $$1}' > ../shortref.txt
+	cd build/ && md5sum $(SMALL) | awk '{print $$1}' > ../shortref.txt
 
 .PHONY: resx5.txt
 resx5.txt: cleanres res_1.txt res_2.txt res_3.txt res_4.txt res_5.txt
@@ -62,4 +62,4 @@ cleanres:
 res_%.txt: ref.txt shortref.txt interpres%.txt mixedres%.txt
 	echo "  rep$*:" >> $@
 	diff -q shortref.txt interpres$*.txt; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL"; else echo "    interp: PASS"; fi >> $@
-	diff -q ref.txt mixedres$*.txt; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL, $$(cat mixed_time$*)"; else echo "    mixed: PASS, $$(cat mixed_time$*)"; fi >> $@
+	diff -q ref.txt mixedres$*.txt; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL, $$(grep user mixed_time$* | awk '{print $$2}')"; else echo "    mixed: PASS, $$(grep user mixed_time$* | awk '{print $$2}')"; fi >> $@
