--- a/microbenchmarks/concrete/tsort/Makefile
+++ b/microbenchmarks/concrete/tsort/Makefile
@@ -2,7 +2,9 @@ ROOT?=/project
 BIN?=main
 CFLAGS?=-O0
 USER=--user $$(id -u):$$(id -g)
-DOCKER=docker run $(USER) --rm --mount type=bind,src=$$(pwd),dst=/project/ tase bash
+DOCKER=docker run $(USER) --rm --mount type=bind,src=$$(pwd),dst=/project/ $(CONTAINER) bash
+
+TSX?=
 
 LARGE=../tsortFile
 SMALL=../tsortShort
@@ -10,19 +12,9 @@ all: build/main build/obj.dump
 
 
 build/main: 
-	$(DOCKER) -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
+	$(DOCKER) -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" TSX="$(TSX)" -f build.Makefile'
 
-
-test:
-	cd build/ && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false - ../tsortFile
-
-
-gdbtest: tsortShort
-	cd build/ && head -n 1000 ../tsortFile > tsortShort && env KLEE_RUNTIME_LIBRARY_PATH=$$(pwd)/bitcode/ gdb --args main -project=main -taseDebug -modelDebug -dontFork -taseManager=false -singleStepping -check-overshift=false - tsortShort
-
-mixedtest:
-	cd build/ && rm -f Monitor* && ./run.sh -dontFork -taseManager=false -check-overshift=false -singleStepping -check-overshift=false - ../tsortFile
-
+.PHONY: build/obj.dump clean
 build/obj.dump: build/main
 	objdump -C -D -w -M suffix -j .text build/main > build/obj.dump
 
@@ -31,10 +23,18 @@ clean:
 
 #.PRECIOUS: build/Monitor.interp% interp_time% build/Monitor.mixed% mixed_time% 
 build/Monitor.interp% interp_time%:
+ifeq ($(TSX), 1)
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -check-overshift=false -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../interp_time$*'
+else
 	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../interp_time$*'
+endif
 
 build/Monitor.mixed% mixed_time%:
+ifeq ($(TSX), 1)
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -modelDebug -log=$(notdir $@) - $(LARGE) 2>1 ; } 2> ../mixed_time$*'
+else
 	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - $(LARGE) 2>1 ; } 2> ../mixed_time$*'
+endif
 
 interpres%.txt: build/Monitor.interp%
 	grep ^OUT $< | awk '{print $$2}' > $@
