--- a/install/Makefile
+++ b/install/Makefile
@@ -82,8 +82,9 @@ $(RUN_DIR)/lib/musl.o:
 	cd ltbuild && ar -x ../libtasec.a && ld -o $(RUN_DIR)/lib/musl.o -r *.o
 	rm -rf ltbuild
 	rm libtasec.a
+	make -C $(MUSL_PATH) clean
 
-$(RUN_DIR)/lib/musl_notsx.o:
+$(RUN_DIR)/lib/musl_notsx.o: $(RUN_DIR)/lib/musl.o
 	cp $(MUSL_PATH)/TASEConfig/config.mak_no_simd $(MUSL_PATH)/config.mak
 	env PATH="$(RUN_DIR)/bin:$${PATH}" $(MAKE) MODELED_FN_ARG="$(MODELED_FN_ARG_NOTSX)" -C $(MUSL_PATH)
 	ar crs libtasec.a $(MUSL_OBJS)
@@ -93,9 +94,9 @@ $(RUN_DIR)/lib/musl_notsx.o:
 	rm libtasec.a
 
 
-$(BUILD_DIR)/build/klee/lib/everything.o: $(RUN_DIR)/lib/musl.o
+$(BUILD_DIR)/build/klee/lib/everything.o: $(RUN_DIR)/lib/musl.o $(RUN_DIR)/lib/musl_notsx.o
 	mkdir -p $(BUILD_DIR)/build/klee/lib/
-	$(MAKE) -C $(BUILD_DIR)/microbenchmarks/concrete/cksum/ -f build.Makefile ROOT=$(BUILD_DIR)/build/cksum OUTDIR=$(BUILD_DIR)/build/cksum/build $(BUILD_DIR)/build/cksum/build/everything.o BASE_DIR=/TASE_BUILD
+	$(MAKE) -C $(BUILD_DIR)/microbenchmarks/concrete/cksum/ -f build.Makefile ROOT=$(BUILD_DIR)/build/cksum OUTDIR=$(BUILD_DIR)/build/cksum/build $(BUILD_DIR)/build/cksum/build/everything.o BASE_DIR=$(RUN_DIR)
 	mv $(BUILD_DIR)/build/cksum/build/everything.o $(BUILD_DIR)/build/klee/lib/
 
 
