--- a/microbenchmarks/slidingscale/bigNum/Makefile
+++ b/microbenchmarks/slidingscale/bigNum/Makefile
@@ -6,7 +6,7 @@ USER=-u $$(id -u):$$(id -g)
 
 TSX?=
 
-DOCKER=docker run --rm $(USER) --mount type=bind,src=$$(pwd),dst=/project/ $(CONTAINER) bash
+DOCKER=docker run --rm $(USER) --mount type=bind,src=$$(pwd),dst=/project/ --mount type=bind,src=/lib/x86_64-linux-gnu/,dst=/external/lib/ --mount type=bind,src=/usr/include/x86_64-linux-gnu/,dst=/external/header/ $(CONTAINER) bash
 all: main
 
 
@@ -21,15 +21,17 @@ SlidingScaleResults.txt: res1 res2 res3 res4
 
 res%:
 ifeq ($(TSX), 1)
+	cd build && \
 	for i in {0..50000..1000}; \
 	do \
-	$(DOCKER) -c "cd /project/build/ && { time ./run.sh -optimizeConstMemOps=TRUE -use-forked-solver=FALSE -rewrite-equalities=FALSE -use-independent-solver=TRUE   -use-cex-cache=TRUE -use-cache=FALSE -retryMax=1 -tranBBMax=16 -modelDebug=FALSE -useCMS4=FALSE -use-legacy-independent-solver=TRUE -UseCanonicalization=TRUE -check-overshift=FALSE -log=false - $$i 50000 1 2>1 >/dev/null ; } 2>&1 | grep user | awk '"'{print "'"$$i"'", $$2}'"' >> ../res$*" ; \
+	{ time ./run.sh -optimizeConstMemOps=TRUE -use-forked-solver=FALSE -rewrite-equalities=FALSE -use-independent-solver=TRUE   -use-cex-cache=TRUE -use-cache=FALSE -retryMax=1 -tranBBMax=16 -modelDebug=FALSE -useCMS4=FALSE -use-legacy-independent-solver=TRUE -UseCanonicalization=TRUE -check-overshift=FALSE -log=false - $$i 50000 1 2>1 >/dev/null ; } 2>&1 | grep user | awk '{print $$i, $$2}' >> ../res$* ; \
 done
 
 else
+	cd build && \
 	for i in {0..50000..1000}; \
 	do \
-	$(DOCKER) -c "cd /project/build/ && { time ./run.sh -optimizeConstMemOps=TRUE -use-forked-solver=FALSE -rewrite-equalities=FALSE -use-independent-solver=TRUE   -use-cex-cache=TRUE -use-cache=FALSE -retryMax=1 -tranBBMax=16 -modelDebug=FALSE -useCMS4=FALSE  -use-legacy-independent-solver=TRUE -UseCanonicalization=TRUE -check-overshift=FALSE -singleStepping -log=false - $$i 50000 1 2>1 >/dev/null ; } 2>&1 | grep user | awk '"'{print "'"$$i"'", $$2}'"' >> ../res$*" ; \
+	{ time ./run.sh -optimizeConstMemOps=TRUE -use-forked-solver=FALSE -rewrite-equalities=FALSE -use-independent-solver=TRUE   -use-cex-cache=TRUE -use-cache=FALSE -retryMax=1 -tranBBMax=16 -modelDebug=FALSE -useCMS4=FALSE  -use-legacy-independent-solver=TRUE -UseCanonicalization=TRUE -check-overshift=FALSE -singleStepping -log=false - $$i 50000 1 2>1 >/dev/null ; } 2>&1 | grep user | awk '{print $$i, $$2}' >> ../res$* ; \
 	done
 endif
 
