--- a/microbenchmarks/slidingscale/bigNum/Makefile
+++ b/microbenchmarks/slidingscale/bigNum/Makefile
@@ -5,13 +5,15 @@ SHELL:=bash
 USER=-u $$(id -u):$$(id -g)
 
 TSX?=
+SIZE?=50000
+STEP?=1000
 
 DOCKER=docker run --rm $(USER) --mount type=bind,src=$$(pwd),dst=/project/ --mount type=bind,src=/lib/x86_64-linux-gnu/,dst=/external/lib/ --mount type=bind,src=/usr/include/x86_64-linux-gnu/,dst=/external/header/ $(CONTAINER) bash
 all: main
 
 
 main: 
-	$(DOCKER) -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" TSX="$(TSX)" -f build.Makefile'
+	$(DOCKER) -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" TSX=$(TSX) -f build.Makefile'
 
 
 SlidingScaleResults.txt: res1 res2 res3 res4
@@ -22,16 +24,16 @@ SlidingScaleResults.txt: res1 res2 res3 res4
 res%:
 ifeq ($(TSX), 1)
 	cd build && \
-	for i in {0..50000..1000}; \
+	for i in {0..$(SIZE)..$(STEP)}; \
 	do \
-	{ time ./run.sh -optimizeConstMemOps=TRUE -use-forked-solver=FALSE -rewrite-equalities=FALSE -use-independent-solver=TRUE   -use-cex-cache=TRUE -use-cache=FALSE -retryMax=1 -tranBBMax=16 -modelDebug=FALSE -useCMS4=FALSE -use-legacy-independent-solver=TRUE -UseCanonicalization=TRUE -check-overshift=FALSE -log=false - $$i 50000 1 2>1 >/dev/null ; } 2>&1 | grep user | awk '{print "'"$$i"'", $$2}' >> ../res$* ; \
+	{ time ./run.sh -optimizeConstMemOps=TRUE -use-forked-solver=FALSE -rewrite-equalities=FALSE -use-independent-solver=TRUE   -use-cex-cache=TRUE -use-cache=FALSE -retryMax=1 -tranBBMax=16 -modelDebug=FALSE -useCMS4=FALSE -use-legacy-independent-solver=TRUE -UseCanonicalization=TRUE -check-overshift=FALSE -log=false - $$i $(SIZE) 1 2>1 >/dev/null ; } 2>&1 | grep user | awk '{print "'"$$i"'", $$2}' >> ../res$* ; \
 done
 
 else
 	cd build && \
-	for i in {0..50000..1000}; \
+	for i in {0..500000..10000}; \
 	do \
-	{ time ./run.sh -optimizeConstMemOps=TRUE -use-forked-solver=FALSE -rewrite-equalities=FALSE -use-independent-solver=TRUE   -use-cex-cache=TRUE -use-cache=FALSE -retryMax=1 -tranBBMax=16 -modelDebug=FALSE -useCMS4=FALSE  -use-legacy-independent-solver=TRUE -UseCanonicalization=TRUE -check-overshift=FALSE -singleStepping -log=false - $$i 50000 1 2>1 >/dev/null ; } 2>&1 | grep user | awk '{print "'"$$i"'", $$2}' >> ../res$* ; \
+	{ time ./run.sh -optimizeConstMemOps=TRUE -use-forked-solver=FALSE -rewrite-equalities=FALSE -use-independent-solver=TRUE   -use-cex-cache=TRUE -use-cache=FALSE -retryMax=1 -tranBBMax=16 -modelDebug=FALSE -useCMS4=FALSE  -use-legacy-independent-solver=TRUE -UseCanonicalization=TRUE -check-overshift=FALSE -singleStepping -log=false - $$i $(SIZE) 1 2>1 >/dev/null ; } 2>&1 | grep user | awk '{print "'"$$i"'", $$2}' >> ../res$* ; \
 	done
 endif
 
