--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:20.04 AS tase_llvm
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update -y && apt-get install --no-install-recommends -y build-essential autoconf automake binutils bison flex make cmake gawk gcc git wget curl bash-completion software-properties-common linux-tools-generic linux-tools-common python python3-dev python3-pip zip unzip emacs libboost-program-options-dev perl zlib1g-dev libcap-dev libncurses5 libncurses-dev libgmp-dev texinfo less gdb libz3-4 libz3-dev && \
+RUN apt-get update -y && apt-get install --no-install-recommends -y build-essential autoconf automake binutils bison flex make cmake gawk gcc g++ git wget curl bash-completion software-properties-common linux-tools-generic linux-tools-common python python3-dev python3-pip zip unzip emacs libboost-program-options-dev perl zlib1g-dev libcap-dev libncurses5 libncurses-dev libgmp-dev texinfo less gdb libz3-4 libz3-dev libtinfo5 && \
 python3 -m pip install -U mypy
 
 
